# TR-mbed

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  .mbedignore  AVX512_2BesselFunctions_8h.html  AVX512_2BesselFunctions_8h_source.html  AVX512_2Complex_8h.html  AVX512_2Complex_8h_source.html  AVX512_2PacketMath_8h.html  AVX512_2PacketMath_8h_source.html  AVX512_2SpecialFunctions_8h.html  AVX512_2SpecialFunctions_8h_source.html  AVX512_2TypeCasting_8h.html  AVX512_2TypeCasting_8h_source.html  AVX_2BesselFunctions_8h.html  AVX_2BesselFunctions_8h_source.html  AVX_2Complex_8h.html  AVX_2Complex_8h_source.html  AVX_2PacketMath_8h.html  AVX_2PacketMath_8h_source.html  AVX_2SpecialFunctions_8h.html  AVX_2SpecialFunctions_8h_source.html  AVX_2TypeCasting_8h.html  AVX_2TypeCasting_8h_source.html  Adafruit__GFX_8cpp.html  Adafruit__GFX_8h.html  Adafruit__GFX_8h_source.html  Adafruit__GFX__Config_8h.html  Adafruit__GFX__Config_8h_source.html  Adafruit__SSD1306_8cpp.html  Adafruit__SSD1306_8h.html  Adafruit__SSD1306_8h_source.html  AlignedBox_8h.html  AlignedBox_8h_source.html  AltiVec_2Complex_8h.html  AltiVec_2Complex_8h_source.html  AltiVec_2PacketMath_8h.html  AltiVec_2PacketMath_8h_source.html  (+9629 more)
.md/: Docs.md  (+4 more)
core/: CMakeLists.txt
core/base_robot/: BaseRobot.h  MainLoop.cpp  MainLoop.h
core/commands/: CMakeLists.txt  RamseteCommand.cpp  RamseteCommand.h
core/subsystems/: Chassis.cpp  Chassis.h  ChassisKalman.cpp  ChassisKalman.h  ChassisSubsystem.cpp  ChassisSubsystem.h  HeroShooterSubsystem.cpp  HeroShooterSubsystem.h  MecanumChassisSubsystem.cpp  MecanumChassisSubsystem.h  Odometry.cpp  Odometry.h  OmniWheelSubsystem.cpp  OmniWheelSubsystem.h  ShooterSubsystem.cpp  ShooterSubsystem.h  Subsystem.h  TurretSubsystem.cpp  TurretSubsystem.h  oled_subsystem.cpp  oled_subsystem.h
core/util/: CMakeLists.txt  buttonanalyzer.hpp  helperFunctions.hpp
core/util/algorithms/: CMakeLists.txt  ChassisSpeeds.cpp  ChassisSpeeds.h  PID.cpp  PID.h  PIDTools.cpp  PIDTools.h  PIDTuner.cpp  PIDTuner.h  Pose2D.cpp  Pose2D.h  PwmIn.cpp  RamseteController.cpp  RamseteController.h  TRMutex.cpp  TRMutex.h  WheelKalman.cpp  WheelKalman.h  WheelSpeeds.cpp  WheelSpeeds.h  general_functions.cpp  general_functions.h  speedtocurrent.hpp
core/util/algorithms/ekf/: TinyEKF.h  tiny_ekf_struct.h
core/util/algorithms_brust_fire/: ChassisSpeeds.h  PID.cpp  PID.h  Pose2D.h  RamseteController.h  WheelKalman.cpp  WheelKalman.h  WheelSpeeds.cpp  WheelSpeeds.h
core/util/algorithms_brust_fire/ekf/: tiny_ekf.cpp  tiny_ekf.h
core/util/communications/: CANHandler.h  CMakeLists.txt  DJIRemote.cpp  DJIRemote.h  DJIRemote2.cpp  DJIRemote2.h  Jetson.cpp  Jetson.h  PwmIn.cpp  PwmIn.h  StmIO.h  comDocumentation.md
core/util/communications/jetson/: CMakeLists.txt  Jetson.cpp  Jetson.h  Packet.h
core/util/communications/referee/: crc.cpp  crc.h  ref_constants.h  ref_operations.cpp  ref_operations.h  ref_serial.cpp  ref_serial.h  ref_ui.cpp  ref_ui.h
core/util/communications/ui/: ui.h  ui_g.c  ui_g.cpp  ui_g.h  ui_interface.c  ui_interface.cpp  ui_interface.h  ui_status.cpp  ui_status.h  ui_types.h
core/util/motor/: CANMotorDocumentation.md  CMakeLists.txt  DJIMotor.cpp  DJIMotor.h  PWMMotor.cpp  PWMMotor.h
core/util/peripherals/: CMakeLists.txt  Sensor.h
core/util/peripherals/INA226/: INA226.cpp  INA226.h
core/util/peripherals/INA226_new/: CMakeLists.txt  ina226.cpp  ina226.hpp
core/util/peripherals/encoder/: MA4.cpp  MA4.h  as5600.cpp  as5600.h
core/util/peripherals/imu/: Adafruit_BNO055.h  BNO055.cpp  BNO055.h  CMakeLists.txt  IMU.h  ISM330.cpp  ISM330.h  LIS3MDL.cpp  LIS3MDL.h  MPU6050.cpp  MPU6050.h
core/util/peripherals/imu/examples/: CMakeLists.txt  (+2 more)
core/util/peripherals/oled/: Adafruit_GFX.cpp  Adafruit_GFX.h  Adafruit_GFX_Config.h  Adafruit_SSD1306.cpp  Adafruit_SSD1306.h  SSD1308.cpp  SSD1308.h  font_16x24.h  glcdfont.h  mbed_logo.h  oledDisplay.cpp  oledDisplay.h
micro-ros/: CMakeLists.txt  jetson.cpp  jetson.h  tester.cpp  transports.cpp
robots/: CMakeLists.txt  LoopHook.h  MainLoop.cpp  MainLoop.h  RobotConfig.h  RobotConstants.h  RobotState.h  main.h
robots/Engineer/: CMakeLists.txt  Engineer.h  main.cpp
robots/Hero/: CMakeLists.txt  Hero.cpp  Hero.h  main.cpp
robots/Infantry/: CMakeLists.txt  Infantry.cpp  Infantry.h  InfantryNew.cpp  InfantrySweep.cpp  RobotConfigInfantry.cpp  RobotStateInfantry.cpp  main.cpp
robots/Sentry/: CMakeLists.txt  Sentry.cpp  Sentry.h  main.cpp
robots/Test-Bench/: CMakeLists.txt  main.cpp
robots/TestBench/: CMakeLists.txt  TestBench.cpp  TestBench.h  bufferdata.txt  chris-turret-cv.txt  main.cpp  main.tuneieng  pids.txt  pitch_tune.txt  remote.txt  test.cpp
util/: Ace notes on new spaghetti.txt  CMakeLists.txt  helperFunctions.hpp  motor.hpp  pid.hpp
util/algorithms/: CMakeLists.txt  pid.hpp  speedtocurrent.hpp
util/communications/: CANMsg.h  CMakeLists.txt  DJIRemote.cpp  DJIRemote.h  SerialCommunication.hpp  canHandler.cpp  canHandler.hpp  causeSpaghettiComesOnceInALifetime.hpp  comDocumentation.md  crc.cpp  djiremoteuart.h  djiremoteuart.hpp  main (for ref_serial).cpp  newCANHandler.h  newCANHandler.hpp  pwmmotor.cpp  ref_serial.cpp  ref_serial.hpp  ref_ui.cpp  ref_ui.hpp  serialLogger.hpp
util/communications/oled/: SSD1308.cpp  SSD1308.hpp
util/communications/referee/: CMakeLists.txt  ref_serial.h
util/imu/: BNO055.cpp  BNO055.h  imuData.cpp  imuExampleQuaternions.cpp  main.cpp
util/motor/: CANMotor.cpp  CANMotor.hpp  CANMotorDocumentation.md  CMakeLists.txt  DJIMotor.h  MotorDocumentation.md  MotorDocumentation.md.backup  OLD_CANMotorDocumentation.md  PWMMotorDocumentation.md  momsSpaghetti.cpp  momsSpaghetti.hpp  motor.hpp  motorcan2.hpp  pwmmotor.cpp  youOnlyGetOneSpaghetti.hpp
util/peripherals/imu/: CMakeLists.txt  imuExampleAllData.cpp
util/peripherals/imu/examples/: CMakeLists.txt
util/peripherals/oled/: CMakeLists.txt  SSD1308.cpp
util/subsystems/: CMakeLists.txt  Chassis.cpp  Chassis.h
util/testing/: inputtester.hpp
util/testing/input_tester_arduino/: MyButton.h  input_tester_arduino.ino
(+539 files in other folders)
